# qit

./: CMakeLists.txt  LICENSE  README.md  icons.qrc  qml.qrc
cmake/: FindLibGit2.cmake
qml/: ApplicationWindow.qml  Main.qml  MenuButton.qml  OverlayMenu.qml  RepositoryView.qml  RepositoryViewHeader.qml  StatusBar.qml
qml/styling/: MenuStyle.qml  qmldir
src/: main.c++  repository.c++  repository.h++
